Conversion Prompt Changes and Utility Conversions
CONVERSION_GUIDE Iteration through files:
 FindRoot, HalfUpFormat, UtilException, AdaptiveRangeKutta.